# F5-TTS-API

./: .gitignore  Dockerfile  README.md  app.py  config.txt  custom.toml  docker-compose.yml  flash_attention_install.bat  logging.conf  pyproject.toml  setup.bat  test-inference.bat  test_api.bat  test_api.py  tts-api.bat
configs/: test_config.toml
reference/: texto.txt  transcription.txt
src/f5_tts/: socket_client.py
src/f5_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/f5_tts/infer/: utils_infer.py
src/f5_tts/infer/examples/: spanish_test.toml
src/f5_tts/model/: number_normalizer.py  utils.py
