[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f5-tts"
version = "1.1.5"
description = "F5-TTS: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "accelerate>=0.33.0,!=1.7.0",
    "bitsandbytes>0.37.0; platform_machine != 'arm64' and platform_system != 'Darwin'",
    "cached_path",
    "click>=8.2.0",
    "datasets",
    "ema_pytorch>=0.5.2",
    "fastapi==0.115.12",
    "gradio>=3.45.2",
    "huggingface_hub>=0.21.0",
    "hydra-core>=1.3.0",
    "inflect",
    "jieba",
    "librosa",
    "matplotlib",
    "num2words>=0.5.13",
    "numpy==2.2.5",
    "pydantic==2.11.4",
    "pydub",
    "pypinyin",
    "pyyaml==6.0.2",
    "python-dotenv",
    "python-multipart==0.0.20",
    "safetensors==0.5.3",
    "sounddevice",
    "soundfile",
    "starlette==0.46.2",
    "tomli>=0.10.2",
    "tomli-w==1.2.0",
    "torch>=2.7.0; platform_system != 'Darwin'",
    "torchvision>=0.22.0; platform_system != 'Darwin'",
    "torchaudio>=2.7.0; platform_system != 'Darwin'",
    "torchdiffeq",
    "tqdm>=4.65.0",
    "transformers",
    "transformers_stream_generator",
    "uvicorn==0.34.2",
    "vocos",
    "wandb",
    "websockets>=11.0.3",
    "x_transformers>=1.31.14",
    "toml",
]

[project.optional-dependencies]
eval = [
    "faster_whisper==0.10.1",
    "funasr",
    "jiwer",
    "modelscope",
    "zhconv",
    "zhon",
]

[project.urls]
Homepage = "https://github.com/josepheudave/F5-TTS"

[project.scripts]
"f5-tts_infer-cli" = "f5_tts.infer.infer_cli:main"
"f5-tts_infer-gradio" = "f5_tts.infer.infer_gradio:main"
"f5-tts_finetune-cli" = "f5_tts.train.finetune_cli:main"
"f5-tts_finetune-gradio" = "f5_tts.train.finetune_gradio:main"
